# Minimum required version of cmake
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

# Project name and programming languages used
PROJECT( MY_COOL_PROJECT CXX )
ADD_DEFINITIONS( -std=c++11 )

# CMake module(s) path
SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR} )

ADD_SUBDIRECTORY( /home/henning/Documents/trex2-agent ${CMAKE_CURRENT_SOURCE_DIR}/trex_bin )

#INCLUDE_DIRECTORIES( . ${ACADO_INCLUDE_DIRS} )

file(GLOB SOURCES "source/*.cpp" )

ADD_EXECUTABLE( Trex_UAV_agent ${SOURCES} )


#TARGET_LINK_LIBRARIES( MPC ${ACADO_SHARED_LIBRARIES} )

#SET_TARGET_PROPERTIES( MPC PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build )
